--- a/NNZFSC/Views/Payment/Edit.cshtml
+++ b/NNZFSC/Views/Payment/Edit.cshtml
@@ -5,81 +5,113 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>MemberPayment</h4>
+
+    <div class="container-fluid">
+        <h4>Member Information</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.PaymentId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PaymentId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        <div class="row">
+            <div class="col-md-4" style="border-right:outset">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.MemberId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MemberId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MemberId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="text-center" >
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.PaymentDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PaymentDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.NextPaymentDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NextPaymentDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NextPaymentDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PaymentBy, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentBy, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PaymentBy, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PaymentAmount, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentAmount, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PaymentAmount, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.IsRenewal, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsRenewal)
-                    @Html.ValidationMessageFor(model => model.IsRenewal, "", new { @class = "text-danger" })
+                    <img src="~/img/NNZFSC_Logo.jpg" class="avatar img-circle" alt="avatar" height="150" width="150">
                 </div>
+                <br />
+                <div class="text-center">
+                    @Html.LabelFor(model => model.MemberDetails.MemberId, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.TextBoxFor(model => model.MemberDetails.MemberId, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                    @Html.ValidationMessageFor(model => model.MemberDetails.MemberId, "", new { @class = "text-danger" })
+                </div>
+                <br />
+                <div class="text-center">
+                    @Html.LabelFor(model => model.MemberDetails.MemberFirstName , htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.TextBoxFor(model => model.MemberDetails.MemberFirstName, new {@class= "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                    @Html.ValidationMessageFor(model => model.MemberDetails.MemberFirstName, "", new { @class = "text-danger" })
+                </div>
+                <br />
+                <div class="text-center">
+                    @Html.LabelFor(model => model.MemberDetails.MemberMiddleName, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.TextBoxFor(model => model.MemberDetails.MemberMiddleName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                    @Html.ValidationMessageFor(model => model.MemberDetails.MemberMiddleName, "", new { @class = "text-danger" })
+                </div>
+                <br />
+                <div class="text-center">
+                    @Html.LabelFor(model => model.MemberDetails.MemberLastName, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.TextBoxFor(model => model.MemberDetails.MemberLastName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                    @Html.ValidationMessageFor(model => model.MemberDetails.MemberLastName, "", new { @class = "text-danger" })
+                </div>
+                <br />
+                <div class="text-center">
+                    @Html.LabelFor(model => model.MemberDetails.MemberAddress, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.TextBoxFor(model => model.MemberDetails.MemberAddress, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                    @Html.ValidationMessageFor(model => model.MemberDetails.MemberAddress, "", new { @class = "text-danger" })
+                </div>
+                <br />
+                <div class="text-center">
+                    @Html.LabelFor(model => model.MemberDetails.EmailAddress, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.TextBoxFor(model => model.MemberDetails.EmailAddress, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                    @Html.ValidationMessageFor(model => model.MemberDetails.EmailAddress, "", new { @class = "text-danger" })
+                </div>
+                <br />
+                <div class="text-center">
+                    @Html.LabelFor(model => model.MemberDetails.MembershipDate, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.TextBoxFor(model => model.MemberDetails.MembershipDate, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                    @Html.ValidationMessageFor(model => model.MemberDetails.MembershipDate, "", new { @class = "text-danger" })
+                </div>
+
+                <br />
+                <div class="text-center">
+                    @Html.LabelFor(model => model.NextPaymentDate, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.TextBoxFor(model => model.NextPaymentDate, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                    @Html.ValidationMessageFor(model => model.NextPaymentDate, "", new { @class = "text-danger" })
+                </div>
+
+
             </div>
+
+            <div class="col-md-6">
+                <br /><br />
+                <div>  <h5 class="jumbotron" style="padding:2rem">Renew Member</h5></div>
+                <div class="form-group">
+
+                    @Html.LabelFor(model => model.PaymentDate, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.EditorFor(model => model.PaymentDate , new { htmlAttributes = new { @class = "form-control col-md-4" } })
+                    @Html.ValidationMessageFor(model => model.PaymentDate, "", new { @class = "text-danger" })
+
+                </div>
+                <div class="form-group">
+
+                    @Html.LabelFor(model => model.NextPaymentDate, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.TextBoxFor(model => model.NextPaymentDate, new { @class = "form-control", @readonly = true })
+                    @Html.ValidationMessageFor(model => model.NextPaymentDate, "", new { @class = "text-danger" })
+
+                </div>
+                <div class="form-group">
+
+                    @Html.LabelFor(model => model.PaymentAmount, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.EditorFor(model => model.PaymentAmount, new { htmlAttributes = new { @class = "form-control col-md-4" } })
+                    @Html.ValidationMessageFor(model => model.PaymentAmount, "", new { @class = "text-danger" })
+
+                </div>
+               <div class="form-group">
+                    <div class="col-md-offset-2 col-md-4">
+                        <input type="submit" value="Save" class="btn btn-success" />
+                    </div>
+            </div>
+
+
+
+
+            </div>
+
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
     </div>
-}
+
+    }
 
 <div>
     @Html.ActionLink("Back to List", "Index")
