--- a/NNZFSC/Views/Dashboard/UserDashboard.cshtml
+++ b/NNZFSC/Views/Dashboard/UserDashboard.cshtml
@@ -1,8 +1,159 @@
 ﻿
+<!DOCTYPE html>
+<html lang="en">
 @{
     ViewBag.Title = "UserDashboard";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>UserDashboard</h2>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Dashboard</title>
 
+    <!--- CSS-->
+    @*<link href="~/Dashboard/font-face.css" rel="stylesheet" media="all" />
+        <link href="~/Dashboard/font-awesome.min.css" rel="stylesheet" media="all" />
+        <link href="~/Dashboard/fontawesome-all.min.css" rel="stylesheet" media="all" />*@
+    @*<link href="~/Dashboard/material-design-iconic-font.min.css" rel="stylesheet" media="all" />*@
+    <link href="~/Dashboard/bootstrap.min.css" rel="stylesheet" media="all" />
+
+    <link href="~/Dashboard/animsition.min.css" rel="stylesheet" media="all" />
+    @*<link href="~/Dashboard/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet" media="all" />*@
+    @*<link href="~/Dashboard/animate.css" rel="stylesheet" media="all"/>*@
+    <link href="~/Dashboard/hamburgers.min.css" rel="stylesheet" media="all" />
+    @*<link href="~/Dashboard/slick.css" rel="stylesheet" media="all" />
+        <link href="~/Dashboard/select2.min.css" rel="stylesheet" media="all" />*@
+    @*<link href="~/Dashboard/perfect-scrollbar.css" rel="stylesheet" media="all" />*@
+
+
+    <link href="~/Dashboard/theme.css" rel="stylesheet" />
+
+
+</head>
+<body class="animsition">
+    <div class="page-wrapper">
+        <!-- HEADER MOBILE-->
+        <header class="header-mobile d-block d-lg-none">
+            <div class="header-mobile__bar">
+                <div class="container-fluid">
+                    <div class="header-mobile-inner">
+
+                        <button class="hamburger hamburger--slider" type="button">
+                            <span class="hamburger-box">
+                                <span class="hamburger-inner"></span>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <nav class="navbar-mobile">
+                <div class="container-fluid">
+                    <ul class="navbar-mobile__list list-unstyled">
+                        <li class="has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-tachometer-alt"></i>Member
+                            </a>
+                            <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
+                                <li>
+
+                                    @Html.ActionLink(linkText: "Become Member", actionName: "create", controllerName: "RegisterMember")
+
+                                </li>
+                               
+                            </ul>
+                        </li>
+
+
+                        <li>
+                            <a href="form.html">
+                                <i class="far fa-check-square"></i> View Member
+                            </a>
+                        </li>
+
+  
+
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <!-- END HEADER MOBILE-->
+        <!-- MENU SIDEBAR-->
+        <aside class="menu-sidebar d-none d-lg-block">
+
+            <div class="menu-sidebar__content js-scrollbar1">
+                <nav class="navbar-sidebar">
+                    <ul class="list-unstyled navbar__list">
+                        <li class="active has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-tachometer-alt"></i>Members
+                            </a>
+                            <ul class="list-unstyled navbar__sub-list js-sub-list">
+                                <li>
+
+                                    @Html.ActionLink(linkText: "Become Member", actionName: "create", controllerName: "RegisterMember")
+                                </li>
+                              
+
+                            </ul>
+                        </li>
+
+
+                        <li>
+                            <a href="form.html">
+                                <i class="far fa-check-square"></i> View Members
+                            </a>
+                        </li>
+
+                      
+                    </ul>
+                </nav>
+            </div>
+        </aside>
+        <!-- END MENU SIDEBAR-->
+        <!-- PAGE CONTAINER-->
+        <!-- HEADER DESKTOP-->
+        <!-- MAIN CONTENT-->
+        <div class="main-content">
+            <div class="section__content section__content--p30">
+                <div class="container-fluid">
+                    <div class="row">
+
+                        <div class="col-lg-6">
+                            <!--design here-->
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- END MAIN CONTENT-->
+        <!-- END PAGE CONTAINER-->
+    </div>
+
+
+    <!--- Script-->
+    <script src="~/Dashboard/jquery-3.2.1.min.js"></script>
+    @*<script src="~/Dashboard/popper.min.js"></script>*@
+    <script src="~/Dashboard/bootstrap.min.js"></script>
+    @*<script src="~/Dashboard/slick.min.js"></script>
+        <script src="~/Dashboard/wow.min.js"></script>*@
+
+    <script src="~/Dashboard/animsition.min.js"></script>
+    @*<script src="~/Dashboard/bootstrap-progressbar.min.js"></script>
+        <script src="~/Dashboard/jquery.waypoints.min.js"></script>
+        <script src="~/Dashboard/jquery.counterup.min.js"></script>
+        <script src="~/Dashboard/circle-progress.min.js"></script>
+        <script src="~/Dashboard/perfect-scrollbar.js"></script>
+
+        <script src="~/Dashboard/Chart.bundle.min.js"></script>
+        <script src="~/Dashboard/select2.min.js"></script>*@
+
+    <script src="~/Dashboard/main.js"></script>
+
+</body>
+
+</html>
